[package]
name = "sandbox"
version = "0.1.0"
authors = ["yuizho <yuizho3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "reference"
path = "src/reference.rs"

[[bin]]
name = "pointer"
path = "src/pointer.rs"

[[bin]]
name = "tuple"
path = "src/structures/tuple.rs"

[[bin]]
name = "array"
path = "src/structures/array.rs"

[[bin]]
name = "slice"
path = "src/structures/slice.rs"

[[bin]]
name = "str_slice"
path = "src/structures/str_slice.rs"

[[bin]]
name = "vector"
path = "src/structures/vector.rs"

[[bin]]
name = "box"
path = "src/types/box.rs"

[[bin]]
name = "string"
path = "src/types/string.rs"

[[bin]]
name = "option"
path = "src/types/option.rs"

[[bin]]
name = "result"
path = "src/types/result.rs"

[[bin]]
name = "type_alias"
path = "src/types/type_alias.rs"

[[bin]]
name = "struct"
path = "src/types/struct.rs"

[[bin]]
name = "enum"
path = "src/types/enum.rs"

[[bin]]
name = "value_scope"
path = "src/ownership/value_scope.rs"

[[bin]]
name = "borrowing"
path = "src/ownership/borrowing.rs"

[[bin]]
name = "toy_vec"
path = "src/ownership/toy_vec.rs"

[[bin]]
name = "rc"
path = "src/ownership/rc.rs"

[[bin]]
name = "refcell"
path = "src/ownership/refcell.rs"