[package]
name = "sandbox"
version = "0.1.0"
authors = ["yuizho <yuizho3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.2"
spin_sleep = "0.3.7"
termion = "1.5.4"
notify-rust = "3.6.3"

[[bin]]
name = "reference"
path = "src/reference.rs"

[[bin]]
name = "pointer"
path = "src/pointer.rs"

[[bin]]
name = "tuple"
path = "src/structures/tuple.rs"

[[bin]]
name = "array"
path = "src/structures/array.rs"

[[bin]]
name = "slice"
path = "src/structures/slice.rs"

[[bin]]
name = "str_slice"
path = "src/structures/str_slice.rs"

[[bin]]
name = "vector"
path = "src/structures/vector.rs"

[[bin]]
name = "box"
path = "src/types/box.rs"

[[bin]]
name = "string"
path = "src/types/string.rs"

[[bin]]
name = "option"
path = "src/types/option.rs"

[[bin]]
name = "result"
path = "src/types/result.rs"

[[bin]]
name = "type_alias"
path = "src/types/type_alias.rs"

[[bin]]
name = "struct"
path = "src/types/struct.rs"

[[bin]]
name = "enum"
path = "src/types/enum.rs"

[[bin]]
name = "generics"
path = "src/types/generics.rs"

[[bin]]
name = "trait"
path = "src/types/trait.rs"

[[bin]]
name = "value_scope"
path = "src/ownership/value_scope.rs"

[[bin]]
name = "borrowing"
path = "src/ownership/borrowing.rs"

[[bin]]
name = "toy_vec"
path = "src/ownership/toy_vec.rs"

[[bin]]
name = "rc"
path = "src/ownership/rc.rs"

[[bin]]
name = "refcell"
path = "src/ownership/refcell.rs"

[[bin]]
name = "refcell_tls"
path = "src/ownership/refcell_tls.rs"

[[bin]]
name = "arc_rwlock"
path = "src/ownership/arc_rwlock.rs"

[[bin]]
name = "static_rwlock"
path = "src/ownership/static_rwlock.rs"

[[bin]]
name = "timer"
path = "src/thread/timer.rs"

[[bin]]
name = "notify"
path = "src/crates/notify.rs"

[[bin]]
name = "trait_object"
path = "src/oop/trait_object.rs"